# minimal-lecture-template

./: .cspell.json  .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
.devcontainer/: Dockerfile  configure_environment.sh  devcontainer.json  post_attach.sh
notebooks/: example.ipynb  mymodule.py
